@startuml
title Diagrama de Classes - Fluxo de Cliente
skinparam classAttributeIconSize 0
skinparam linetype ortho

package "Exceptions" {
    class ValidationException <<exception>> {
        +status_code : int
        +detail : str
    }
    class DuplicateException <<exception>> {
        +status_code : int
        +detail : str
    }
    class DatabaseException <<exception>> {
        +status_code : int
        +detail : str
    }
}

package "Models/Domains" {
    class Usuario {
        #id : int
        #email : str
        #senha : str
        #foto : str
        +to_dict()
    }

    class Cliente {
        +telefone : str
        +to_dict()
    }

    Usuario <|-- Cliente
}

package "Config" {
    class PersistenceConfig {
        +persistence_type : str
        +is_memory() : bool
    }
}

package "Repositories" {
    class RepositoryFactory << (S,#FF7700) Singleton >> {
        +get_cliente_repository()
    }

    class ClienteDBRepository {
        +criar(cliente: Cliente)
        +listar()
    }

    class ClienteMemoryRepository {
        +criar(cliente: Cliente)
        +listar()
    }
}

package "Services" {
    class SenhaService {
        +hash_senha(senha)
    }

    class ValidacaoService {
        +validar_email(email)
        +validar_senha(senha, ...)
    }
}

package "Managers" {
    class ClienteManager {
        +listar_clientes()
        +criar_cliente(dados)
    }
}

package "Controllers" {
    class ClienteController {
        +_registrar_rotas()
    }
}

' Relacionamentos de Instância
ClienteController --> ClienteManager : usa
ClienteManager --> Services: usa

' Fluxo do Factory
RepositoryFactory ..> PersistenceConfig : consulta
ClienteManager ..> RepositoryFactory : solicita repositório
RepositoryFactory ..> ClienteDBRepository : cria/retorna
RepositoryFactory ..> ClienteMemoryRepository : cria/retorna


' Persistência
ClienteDBRepository ..> Cliente : persiste
ClienteMemoryRepository ..> Cliente : persiste

' Relacionamentos com Exceções
ValidacaoService ..> ValidationException : lança
ClienteDBRepository ..> DatabaseException : lança
ClienteDBRepository ..> DuplicateException : lança
ClienteMemoryRepository ..> DuplicateException : lança
@enduml